change grid template areas structure

--- a/style.css
+++ b/style.css
@@ -8,28 +8,20 @@
   background-color: black;
   border: solid 1px black;
   grid-template-areas: 
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . "
-  " . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . ";
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . ."
+" . . . . . . . . . . . . . . . . . .";
 }
 
 /* ---------------------------------------------------------*/
