--- a/style.css
+++ b/style.css
@@ -22,12 +22,12 @@ h1 {
 " w0 w1 w1 w1 w1 w1 w1 w1 w2 w2 w2 w2 w2 w2 w2 w2 w3 y0"
 " w0 b0 b0 b0 b0 b0 b0 b0 w4 w4 w4 b1 b1 b1 b1 b1 w3 y0"
 " w0 b0 b0 b0 b0 b0 b0 b0 w4 w4 w4 b1 b1 b1 b1 b1 w3 y0"
-" . . . . . . . . . . . . . . . . . ."
-" . . . . . . . . . . . . . . . . . ."
-" . . . . . . . . . . . . . . . . . ."
-" . . . . . . . . . . . . . . . . . ."
-" . . . . . . . . . . . . . . . . . ."
-" . . . . . . . . . . . . . . . . . ."
+" . w5 w5 . w6 w6 w6 w7 y1 y1 y1 r0 r0 r0 r0 r1 w3 y0"
+" . w5 w5 . w6 w6 w6 w7 y1 y1 y1 r0 r0 r0 r0 r1 w3 y0"
+" . w5 w5 . w6 w6 w6 w7 y1 y1 y1 r0 r0 r0 r0 r1 w3 y0"
+" . w5 w5 . w6 w6 w6 w7 y1 y1 y1 r0 r0 r0 r0 r1 w3 y0"
+" . w5 w5 . y2 r2 r2 r2 b2 b2 b2 w8 w8 w8 w8 w9 . ."
+" . w5 w5 . y2 r2 r2 r2 b2 b2 b2 w8 w8 w8 w8 w9 . ."
 " . . . . . . . . . . . . . . . . . ."
 " . . . . . . . . . . . . . . . . . ."
 " . . . . . . . . . . . . . . . . . ."
@@ -39,6 +39,7 @@ h1 {
 /* ----------------------- AREAS ---------------------------*/
 /* ---------------------------------------------------------*/
 
+/* ------------------------- WHITE AREAS -------------------*/
 .white0 {
   grid-area: w0;
 }
@@ -55,21 +56,71 @@ h1 {
   grid-area: w3;
 }
 
+.white4 {
+  grid-area: w4;
+}
+
+.white5 {
+  grid-area: w5;
+}
+
+.white6 {
+  grid-area: w6;
+}
+
+.white7 {
+  grid-area: w7;
+}
+
+.white8 {
+  grid-area: w8;
+}
+
+.white9 {
+  grid-area: w9;
+}
+
+/* ------------------------- YELLOW AREAS -------------------*/
 .yellow0 {
   grid-area: y0;
 }
 
-.blue0 {
-  grid-area: b0;
+.yellow1 {
+  grid-area: y1;
 }
 
-.white4 {
-  grid-area: w4;
+.yellow2 {
+  grid-area: y2;
+}
+
+/* ------------------------- RED AREAS -------------------*/
+.red0 {
+  grid-area: r0;
+}
+
+.red1 {
+  grid-area: r1;
+}
+
+.red2 {
+  grid-area: r2
+}
+
+/* ------------------------- BLUE AREAS -------------------*/
+.blue0 {
+  grid-area: b0;
 }
 
 .blue1 {
   grid-area: b1;
 }
+
+.blue2 {
+  grid-area: b2;
+}
+
+
+
 
 
 
@@ -78,16 +129,21 @@ h1 {
 /* ---------------------------------------------------------*/
 
 /* WHITE COLOR */
-.white0, .white1, .white2, .white3, .white4 {
+.white0, .white1, .white2, .white3, .white4, .white5, .white6, .white7, .white8, .white9 {
   background-color: whitesmoke;
 }
 
 /* YELLOW COLOR */
-.yellow0 {
+.yellow0, .yellow1, .yellow2 {
   background-color: yellow;
 }
 
 /* BLUE COLOR */
-.blue0, .blue1 {
+.blue0, .blue1, .blue2 {
   background-color: navy;
+}
+
+/* RED COLOR */
+.red0, .red1, .red2 {
+  background-color: red;
 }
